Calling the "BU.ModuleInit.Msg()" function into the main module's "module.conf" fine

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -106,7 +106,10 @@ fi
 
 # Project's file path.
 __BU_MAIN_PROJECT_FILE_PATH="$(BU.Main.ModConfig.Project.GetProjectFilePath "${__BU_MAIN_PROJECT_FILE_NAME}")" || {
-    BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "$(LINENO - 1)" 'E_BUINIT__BU_MAIN_MODCONFIG__CANNOT_GET_PROJECT_PARENT_DIR';
+    BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "$((LINENO - 1))" 'E_BUINIT__BU_MAIN_MODCONFIG__CANNOT_GET_PROJECT_PARENT_DIR';
+
+    echo >&2; echo "" >&2;
+    echo >&2;
 
     BU.ModuleInit.MsgAbort;
 
