Added the "BU.Main.OS.IsWindows()" function

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -2754,6 +2754,7 @@ alias BU.IsVirtualized='BU.Main.OS.IsVirtualized';
 
 alias BU.CheckOSWindowsVersion='BU.Main.OS.CheckOSWindowsVersion';
 
+alias BU.IsWindows='BU.Main.OS.IsWindows';
 alias BU.IsWindows32bits='BU.Main.OS.IsWindows32bits';
 alias BU.IsWindows64bits='BU.Main.OS.IsWindows64bits';
 alias BU.IsWindowsFamily='BU.Main.OS.IsWindowsFamily';
