--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -38,7 +38,7 @@ __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MOD
     printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n"  \
         "${BASH_SOURCE[0]}" "${LINENO}" '${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog;
 
@@ -81,7 +81,7 @@ __BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "$
     printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n" \
         "${BASH_SOURCE[0]}" "${LINENO}" '$__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog;
 
