--- a/install/.Bash-utils/config/modules/Software/Software.module.conf
+++ b/install/.Bash-utils/config/modules/Software/Software.module.conf
@@ -37,7 +37,7 @@ function BU.Software.ModConfig.Module.SoftwareModuleConfigFolderContent()
 
         # TODO : Checking how to print a translated message from this module at this level of initialization of the "Software" module.
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -75,7 +75,7 @@ __BU_SOFTWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_SOFTWARE
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${____BU_SOFTWARE_MOD__MODULE_CONF__LINENO}" '$__BU_SOFTWARE_MODULE_LIB_MOD_DIR_PATH';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
