--- a/install/.Bash-utils/config/modules/main/ColorsText.conf
+++ b/install/.Bash-utils/config/modules/main/ColorsText.conf
@@ -54,7 +54,7 @@ __BU_MAIN_COLOR_TXT_AQUA="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_AQUA' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -81,7 +81,7 @@ __BU_MAIN_COLOR_TXT_BLACK="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_BLACK' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -108,7 +108,7 @@ __BU_MAIN_COLOR_TXT_BLUE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_BLUE' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -137,7 +137,7 @@ __BU_MAIN_COLOR_TXT_CYAN="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_CYAN' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -164,7 +164,7 @@ __BU_MAIN_COLOR_TXT_FUCHSIA="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_FUCHSIA' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -191,7 +191,7 @@ __BU_MAIN_COLOR_TXT_GRAY="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_GRAY' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -220,7 +220,7 @@ __BU_MAIN_COLOR_TXT_GREEN="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_GREEN' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -247,7 +247,7 @@ __BU_MAIN_COLOR_TXT_LIME="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_LIME' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -274,7 +274,7 @@ __BU_MAIN_COLOR_TXT_MAROON="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_MAROON' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -303,7 +303,7 @@ __BU_MAIN_COLOR_TXT_NAVY="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_NAVY' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -330,7 +330,7 @@ __BU_MAIN_COLOR_TXT_OLIVE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_OLIVE' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -357,7 +357,7 @@ __BU_MAIN_COLOR_TXT_ORANGE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_ORANGE' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -386,7 +386,7 @@ __BU_MAIN_COLOR_TXT_PINK="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_PINK' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -413,7 +413,7 @@ __BU_MAIN_COLOR_TXT_PURPLE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_PURPLE' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -440,7 +440,7 @@ __BU_MAIN_COLOR_TXT_RED="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_RED' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -469,7 +469,7 @@ __BU_MAIN_COLOR_TXT_SALMON="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_SALMON' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -496,7 +496,7 @@ __BU_MAIN_COLOR_TXT_SILVER="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_SILVER' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -523,7 +523,7 @@ __BU_MAIN_COLOR_TXT_TAN="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_TAN' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -552,7 +552,7 @@ __BU_MAIN_COLOR_TXT_TEAL="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_TEAL' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -579,7 +579,7 @@ __BU_MAIN_COLOR_TXT_TURQUOISE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_TURQUOISE' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -606,7 +606,7 @@ __BU_MAIN_COLOR_TXT_VIOLET="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_VIOLET' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -635,7 +635,7 @@ __BU_MAIN_COLOR_TXT_WHITE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_WHITE' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -662,7 +662,7 @@ __BU_MAIN_COLOR_TXT_YELLOW="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_YELLOW' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -697,7 +697,7 @@ __BU_MAIN_COLOR_TXT_CMD="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_CMD' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -723,7 +723,7 @@ __BU_MAIN_COLOR_TXT_ERROR="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_ERROR' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -750,7 +750,7 @@ __BU_MAIN_COLOR_TXT_FUNCTION="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COL
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_FUNCTION' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -777,7 +777,7 @@ __BU_MAIN_COLOR_TXT_HIGHLIGHT="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_HIGHLIGHT' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -804,7 +804,7 @@ __BU_MAIN_COLOR_TXT_NEWSTEP="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_NEWSTEP' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -831,7 +831,7 @@ __BU_MAIN_COLOR_TXT_PATH="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_PATH' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -858,7 +858,7 @@ __BU_MAIN_COLOR_TXT_SUCCESS="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_SUCCESS' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -885,7 +885,7 @@ __BU_MAIN_COLOR_TXT_VAR="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_VAR' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -912,7 +912,7 @@ __BU_MAIN_COLOR_TXT_WARNING="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_TXT_WARNING' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
