--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -43,7 +43,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent.Optimize() { pri
 #   - BU.ModuleInit.DisplayInitGlobalVarsInfos()    -> Modules initializer script
 #   - BU.ModuleInit.Exit()                          -> Modules initializer script
 #   - BU.ModuleInit.Msg()                           -> Modules initializer script
-#   - BU.ModuleInit.MsgAbort()                      -> Modules initializer script
+#   - BU.ModuleInit.MsgTerminate()                  -> Modules initializer script
 #   - BU.ModuleInit.PrintLogError()                 -> Modules initializer script
 
 # shellcheck disable=SC2016,SC2059
@@ -67,7 +67,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_BIN_DIR_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -94,7 +94,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_DOCS_DIR_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -121,7 +121,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_LIB_DIR_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -148,7 +148,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_RES_DIR_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -174,7 +174,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 #   - BU.ModuleInit.DisplayInitGlobalVarsInfos()    -> Modules initializer script
 #   - BU.ModuleInit.Exit()                          -> Modules initializer script
 #   - BU.ModuleInit.Msg()                           -> Modules initializer script
-#   - BU.ModuleInit.MsgAbort()                      -> Modules initializer script
+#   - BU.ModuleInit.MsgTerminate()                  -> Modules initializer script
 #   - BU.ModuleInit.PrintLogError()                 -> Modules initializer script
 
 # shellcheck disable=SC2016,SC2059
@@ -198,7 +198,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -223,7 +223,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_DEVTOOLS_BIN')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -250,7 +250,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_DEVTOOLS_DSK')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -277,7 +277,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_DEVTOOLS_IMG')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -304,7 +304,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_DEVTOOLS_SRC')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -330,7 +330,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_DEVTOOLS_TRANSL')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -356,7 +356,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 #   - BU.ModuleInit.DisplayInitGlobalVarsInfos()    -> Modules initializer script
 #   - BU.ModuleInit.Exit()                          -> Modules initializer script
 #   - BU.ModuleInit.Msg()                           -> Modules initializer script
-#   - BU.ModuleInit.MsgAbort()                      -> Modules initializer script
+#   - BU.ModuleInit.MsgTerminate()                  -> Modules initializer script
 #   - BU.ModuleInit.PrintLogError()                 -> Modules initializer script
 
 # shellcheck disable=SC2016,SC2059
@@ -380,7 +380,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -406,7 +406,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_LIB_MOD_DIR_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -432,7 +432,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_LIB_LANG_DIR_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -464,7 +464,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 #   - BU.ModuleInit.DisplayInitGlobalVarsInfos()    -> Modules initializer script
 #   - BU.ModuleInit.Exit()                          -> Modules initializer script
 #   - BU.ModuleInit.Msg()                           -> Modules initializer script
-#   - BU.ModuleInit.MsgAbort()                      -> Modules initializer script
+#   - BU.ModuleInit.MsgTerminate()                  -> Modules initializer script
 #   - BU.ModuleInit.PrintLogError()                 -> Modules initializer script
 
 # shellcheck disable=SC2016,SC2059
@@ -486,7 +486,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -513,7 +513,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -540,7 +540,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -567,7 +567,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -593,7 +593,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -620,7 +620,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_CONF_FILE_OS_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -647,7 +647,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_CONF_FILE_INIT_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -674,7 +674,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_CONF_FILE_STATUS_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -701,7 +701,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_CONF_FILE_TEXT_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -728,7 +728,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_CONF_FILE_TIME_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -754,7 +754,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 #   - BU.ModuleInit.DisplayInitGlobalVarsInfos()    -> Modules initializer script
 #   - BU.ModuleInit.Exit()                          -> Modules initializer script
 #   - BU.ModuleInit.Msg()                           -> Modules initializer script
-#   - BU.ModuleInit.MsgAbort()                      -> Modules initializer script
+#   - BU.ModuleInit.MsgTerminate()                  -> Modules initializer script
 #   - BU.ModuleInit.PrintLogError()                 -> Modules initializer script
 
 # shellcheck disable=SC2016,SC2059
@@ -777,7 +777,7 @@ function BU.Main.ModConfig.Module.MainModuleInitializerPath() {
             "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
             "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH')" >&2;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -877,7 +877,7 @@ else
 
             unset ____bu_main_modconfig_lineno;
 
-            BU.ModuleInit.MsgAbort;
+            BU.ModuleInit.MsgTerminate;
 
             BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -900,7 +900,7 @@ else
         unset ____v_bu_module_init__bu_main_root_dir_path__chk_err;
         unset ____bu_main_modconfig_lineno;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -926,7 +926,7 @@ else
         unset ____v_bu_module_init__bu_main_root_dir_path__chk_err;
         unset ____bu_main_modconfig_lineno;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -947,7 +947,7 @@ else
 
         unset ____v_bu_module_init__bu_main_root_dir_path__chk_err;
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
