--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -211,7 +211,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BLINK' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_blink_lineno}";
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -235,7 +235,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BLINK_RESET' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_blink_reset_lineno}";
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -259,7 +259,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BOLD' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_bold_lineno}";
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -283,7 +283,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BOLD_RESET' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_bold_reset_lineno}";
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -307,7 +307,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_DIM' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_dim_lineno}";
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -331,7 +331,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_DIM_RESET' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_dim_reset_lineno}";
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -355,7 +355,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_HIDDEN' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_hidden_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
+        BU.ModuleInit.MsgTerminate; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
         BU.ModuleInit.Exit 1; return "${?}";
     };
@@ -377,7 +377,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_HIDDEN_RESET' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_hidden_reset_lineno}";
 
-        BU.ModuleInit.MsgAbort;
+        BU.ModuleInit.MsgTerminate;
 
         BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -401,7 +401,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_italic_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
+        BU.ModuleInit.MsgTerminate; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
         BU.ModuleInit.Exit 1; return "${?}";
     };
@@ -423,7 +423,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC_RESET' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_italic_reset_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
+        BU.ModuleInit.MsgTerminate; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
         BU.ModuleInit.Exit 1; return "${?}";
     };
@@ -445,7 +445,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_RESET' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_reset_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
+        BU.ModuleInit.MsgTerminate; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
         BU.ModuleInit.Exit 1; return "${?}";
     };
@@ -467,7 +467,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_strikethrough_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
+        BU.ModuleInit.MsgTerminate; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
         BU.ModuleInit.Exit 1; return "${?}";
 
@@ -491,7 +491,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_strikethrough_reset_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
+        BU.ModuleInit.MsgTerminate; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
         BU.ModuleInit.Exit 1; return "${?}";
     };
@@ -513,7 +513,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_underline_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
+        BU.ModuleInit.MsgTerminate; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
         BU.ModuleInit.Exit 1; return "${?}";
     };
@@ -535,7 +535,7 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
         BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE_RESET' "$(basename "${BASH_SOURCE[0]}")" "${__bu_main_txt_fmt_underline_reset_lineno}";
 
-        BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
+        BU.ModuleInit.MsgTerminate; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
         BU.ModuleInit.Exit 1; return "${?}";
     };
