--- a/install/.Bash-utils/config/modules/main/ColorsBG.conf
+++ b/install/.Bash-utils/config/modules/main/ColorsBG.conf
@@ -50,7 +50,7 @@ __BU_MAIN_COLOR_BG_AQUA="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_AQUA' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -78,7 +78,7 @@ __BU_MAIN_COLOR_BG_BLACK="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_BLACK' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -106,7 +106,7 @@ __BU_MAIN_COLOR_BG_BLUE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_BLUE' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
      BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -134,7 +134,7 @@ __BU_MAIN_COLOR_BG_CYAN="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_CYAN' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -162,7 +162,7 @@ __BU_MAIN_COLOR_BG_FUCHSIA="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_C
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_FUCHSIA' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -188,7 +188,7 @@ __BU_MAIN_COLOR_BG_GRAY="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_GRAY' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -218,7 +218,7 @@ __BU_MAIN_COLOR_BG_GREEN="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_GREEN' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -246,7 +246,7 @@ __BU_MAIN_COLOR_BG_LIME="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_LIME' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -273,7 +273,7 @@ __BU_MAIN_COLOR_BG_MAROON="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_MAROON' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -303,7 +303,7 @@ __BU_MAIN_COLOR_BG_NAVY="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_NAVY' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -331,7 +331,7 @@ __BU_MAIN_COLOR_BG_OLIVE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_OLIVE' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -357,7 +357,7 @@ __BU_MAIN_COLOR_BG_ORANGE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_ORANGE' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -386,7 +386,7 @@ __BU_MAIN_COLOR_BG_PINK="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_PINK' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -413,7 +413,7 @@ __BU_MAIN_COLOR_BG_PURPLE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_PURPLE' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -439,7 +439,7 @@ __BU_MAIN_COLOR_BG_RED="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_RED' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -468,7 +468,7 @@ __BU_MAIN_COLOR_BG_SALMON="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_SALMON' "$(basename "${BASH_SOURCE[0]}")"   "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;  BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
+    BU.ModuleInit.MsgTerminate;  BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
     BU.ModuleInit.Exit 1; return "${?}";
 
@@ -493,7 +493,7 @@ __BU_MAIN_COLOR_BG_SILVER="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_SILVER' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -520,7 +520,7 @@ __BU_MAIN_COLOR_BG_TAN="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_TAN' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -549,7 +549,7 @@ __BU_MAIN_COLOR_BG_TEAL="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_TEAL' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;  BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
+    BU.ModuleInit.MsgTerminate;  BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
     BU.ModuleInit.Exit 1; return "${?}";
 
@@ -574,7 +574,7 @@ __BU_MAIN_COLOR_BG_TURQUOISE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_TURQUOISE' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -600,7 +600,7 @@ __BU_MAIN_COLOR_BG_VIOLET="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_VIOLET' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -629,7 +629,7 @@ __BU_MAIN_COLOR_BG_WHITE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_WHITE' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -657,7 +657,7 @@ __BU_MAIN_COLOR_BG_YELLOW="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_YELLOW' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'C';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -691,7 +691,7 @@ __BU_MAIN_COLOR_BG_CMD="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_CMD' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -718,7 +718,7 @@ __BU_MAIN_COLOR_BG_ERROR="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_ERROR' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -745,7 +745,7 @@ __BU_MAIN_COLOR_BG_FUNCTION="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_FUNCTION' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -775,7 +775,7 @@ __BU_MAIN_COLOR_BG_HIGHLIGHT="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_HIGHLIGHT' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -806,7 +806,7 @@ __BU_MAIN_COLOR_BG_NEWSTEP="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_C
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_NEWSTEP' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -837,7 +837,7 @@ __BU_MAIN_COLOR_BG_PATH="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_PATH' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
+    BU.ModuleInit.MsgTerminate; BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
     BU.ModuleInit.Exit 1; return "${?}";
 
@@ -862,7 +862,7 @@ __BU_MAIN_COLOR_BG_SUCCESS="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_C
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_SUCCESS' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -892,7 +892,7 @@ __BU_MAIN_COLOR_BG_VAR="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_VAR' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
@@ -922,7 +922,7 @@ __BU_MAIN_COLOR_BG_WARNING="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_C
 
     BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize '__BU_MAIN_COLOR_BG_WARNING' "$(basename "${BASH_SOURCE[0]}")" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}" 'A';
 
-    BU.ModuleInit.MsgAbort;
+    BU.ModuleInit.MsgTerminate;
 
     BU.ModuleInit.AskPrintLog >&2 || { BU.ModuleInit.Exit 1; return "${?}"; };
 
